# skills

./: .gitignore  AGENTS.md  Cargo.toml  README.md  codecov.yaml  justfile
.github/workflows/: check-rust-stable.yml  ci.yml
skills/manage-workspace-agents-md/: SKILL.md
skills/manage-workspace-agents-md/agents/: openai.yaml
skills/manage-workspace-agents-md/checklists/: agent-guide-audit.md
skills/manage-workspace-agents-md/patterns/: agent-guide-layout.md  evidence-and-scope.md  standards-inference.md  validation-guidance.md
skills/manage-workspace-agents-md/templates/: mode-handoffs.md
skills/pre-1-0-forward-only/: SKILL.md
skills/pre-1-0-forward-only/agents/: openai.yaml
skills/rust-best-practices/: SKILL.md
skills/rust-best-practices/agents/: openai.yaml
skills/rust-best-practices/references/: builder-pattern.md  clippy-and-linting-discipline.md  code-generation-templates.md  coding-styles-and-idioms.md  comments-vs-documentation.md  enum-string-conversions.md  error-handling.md  generics-static-and-dynamic-dispatch.md  performance-mindset.md  pointer-types-and-thread-safety.md  type-state-pattern.md
skills/rust-test/: SKILL.md
skills/rust-test/agents/: openai.yaml
skills/rust-test/checklists/: rust-test-checklist.md
skills/rust-test/patterns/: async-concurrency-and-time.md  automated-testing.md  benchmarks-and-performance.md  boundary-and-e2e.md  cargo-test-semantics.md  compile-fail-and-diagnostics.md  coverage-and-mutation.md  doctests-and-examples.md  feature-msrv-matrix.md  fixtures-and-golden.md  flaky-tests.md  insta-snapshots.md  property-and-fuzz.md  rust-1-96-testing-baseline.md  rust-1-97-testing-baseline.md  unsafe-and-memory.md  validation.md
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: check_rust_stable.rs
